#11 | Handling User Availability
Hiển thị trạng thái hoạt động của người dùng

--- a/ChatApp/app/src/main/res/values/colors.xml
+++ b/ChatApp/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="icon_background">#20FFFFFF</color>
     <color name="error">#b00020</color>
     <color name="recived_message_background">#090d16</color>
+    <color name="green">#008000</color>
 </resources>
